--- a/index.htm
+++ b/index.htm
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="pt">
 <head>
@@ -14,20 +13,22 @@
         <span class="usuario">Guitar house</span>
     </header>
     <main>
-        <main>
-            <div class="area-pesquisa">
-                <input type="text" id="campoPesquisa" placeholder="Pesquisar produto...">
-                <button id="botaoPesquisar">Pesquisar</button>
+        <div class="area-pesquisa">
+            <input type="text" id="campoPesquisa" placeholder="Pesquisar produto...">
+            <button id="botaoPesquisar">Pesquisar</button>
+        </div>
+        <div id="listaProdutos">
+            <!-- Card do Produto 1 -->
+            <div class="card-produto">
+                <img src="corda1.jpeg" alt="Corda">
+                <p>Corda Earneball</p>
             </div>
-            <div id="listaProdutos">
-                <!-- Card do Produto -->
-                <div class="card-produto">
-                    <img src="corda1.jpeg" alt="corda">
-                    <p>Corda Earneball</p>
-                </div>
+            <!-- Card do Produto 2 -->
+            <div class="card-produto">
+                <img src="amp.JPEG" alt="Amplificador">
+                <p>Amplificador Marshall</p>
             </div>
-        </main>
-        
+        </div>
     </main>
     <footer>
         <a href="#">Ajuda</a>
@@ -35,6 +36,5 @@
         <a href="#">Política de Privacidade</a>
         <a href="#">Mapa do Site</a>
     </footer>
-    
 </body>
 </html>
